# SHantilly

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mkdocs.yml  sonar-project.properties  vcpkg.json
.context/: README.md
.context/agents/: architect-specialist.md  backend-specialist.md  bug-fixer.md  code-reviewer.md  database-specialist.md  devops-specialist.md  documentation-writer.md  feature-developer.md  frontend-specialist.md  mobile-specialist.md  performance-optimizer.md  refactoring-specialist.md  security-auditor.md  test-writer.md
.context/docs/: README.md  architecture.md  data-flow.md  development-workflow.md  glossary.md  project-overview.md  security.md  testing-strategy.md  tooling.md
.context/plans/: README.md  desenvolvimento-showbox.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  package.yml  release.yml
.trunk/: trunk.yaml
docs/: Gerenciar_Projeto_Conductor.md  README.md  TECHNICAL_OVERVIEW.md  advanced-features.md  best-practices.md  dialogbox-reference.md  getting-started.md  index.md  installation.md  layouts.md  security.md  status-implementacao.md  troubleshooting.md  widgets-reference.md
docs/architecture/: REFACTORING_STRATEGY.md
docs/examples/: 01-hello-world.md  02-formulario-login.md  03-painel-controle.md  04-tabela-dados.md  05-grafico-dinamico.md  README.md
docs/html/: classes.html  dir_3ef7287b8e7a9ed45eff58e9a3bb8bc1.html  dir_6375871cf748812a5b940c58bc14c762.html  dir_64c9f57210c391cc7e1596d6cdb292a0.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_72a08bc5d2a3745ee509be78010f6a07.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_eval.html  functions_func_b.html  functions_func_e.html  functions_func_g.html  functions_func_h.html  functions_func_m.html  functions_func_o.html  functions_func_p.html  functions_func_r.html  functions_func_s.html  functions_func_t.html  functions_h.html  functions_i.html  functions_n.html  functions_p.html  functions_q.html  functions_r.html  functions_s.html  functions_type.html  functions_u.html  functions_vars.html  globals_func.html  hierarchy.html  menudata.js  namespacemembers_enum.html  namespacemembers_eval.html  namespaces.html
examples/: README.md  SHantilly_calendar.sh  SHantilly_charts.sh  SHantilly_icons.sh  SHantilly_listbox.sh  SHantilly_page.sh  SHantilly_painel_icon.sh  SHantilly_progressbar.sh  SHantilly_pushbutton.sh  SHantilly_separator.sh  SHantilly_sidebar_tabs.sh  SHantilly_slider.sh  SHantilly_table.sh  SHantilly_tabs.sh  SHantilly_textbox.sh  SHantilly_textview.sh  SHantilly_themes.sh  integration_test.sh  shantilly_calendar.sh  shantilly_charts.sh  shantilly_icons.sh  shantilly_listbox.sh  shantilly_page.sh  shantilly_painel_icon.sh  shantilly_progressbar.sh  shantilly_pushbutton.sh  shantilly_separator.sh  shantilly_sidebar_tabs.sh  shantilly_slider.sh  shantilly_table.sh  shantilly_tabs.sh  shantilly_textbox.sh  shantilly_textview.sh  shantilly_themes.sh  showbox_calendar.sh  showbox_charts.sh  showbox_icons.sh  showbox_listbox.sh  showbox_page.sh  showbox_painel_icon.sh  (+13 more)
examples/demos/: README.md  demo1  demo1_compat.sh  demo2  demo2_compat.sh  demo3  demo4  demo5  samba_config_demo.sh  test_actions.sh  test_calendar.sh  test_debian_structure.sh  test_help_output.sh  test_man_source.sh  test_v2.sh  visual_layout_test.sh  widget_types_demo.sh  zfs-dashboard.sh
libs/SHantilly-ui/: CMakeLists.txt
libs/showbox-ui/: CMakeLists.txt
man/: README.md  showbox.1  showbox.md
packaging/: README.md
packaging/appimage/: SHantilly.desktop  appimage.Dockerfile  build.sh  start-pkg-appimage.sh
packaging/deb/: build.sh  debian.Dockerfile  start-pkg-deb.sh  ubuntu.Dockerfile
packaging/flatpak/: build.sh  flatpak.Dockerfile  io.github.SHantilly.desktop  io.github.SHantilly.metainfo.xml  io.github.SHantilly.yaml  io.github.showbox.desktop  io.github.showbox.metainfo.xml
packaging/rpm/: SHantilly.spec  build.sh  fedora.Dockerfile  showbox.desktop  showbox.spec
public/: 404.html  index.html
public/Gerenciar_Projeto_Conductor/: index.html
public/advanced-features/: index.html
public/best-practices/: index.html
public/examples/: index.html
public/html/: dir_4107bb2f5de114472ee6e5e50dfdb987.html  dir_b9d8d51d6196c6eeac8fd144fa0c27c2.html  dir_d10175a52dfb51cdde537464ad84eea6.html  functions_func_d.html  functions_func_w.html  functions_func_~.html  functions_o.html  functions_w.html  (+2 more)
src/: README.md  dev.Dockerfile  poc_modern_cli.cpp  start-dev.sh  visual_verifier.cpp
template/: bootstrap.sh
tests/: CMakeLists.txt  README.md  example_test.cpp
tests/auto/: Makefile  commands.pro  tst_SHantilly_builder.cpp  tst_clibuilder.cpp  tst_command_parser.cpp  tst_commands.cpp  tst_interface_builder.cpp  tst_parser.cpp  tst_pushbutton.cpp  tst_showbox_builder.cpp  tst_tokenizer.cpp  tst_units  tst_units.cpp  tst_units.moc  tst_widget_configs.cpp  tst_widgetfactory.cpp  units.pro
tests/manual/: compare_v1_vs_target.sh  test_compatibility.sh
tools/: README.md  start-docker-appimage.sh
(+511 files in other folders)
